# sakura

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  sakura.py  tests.py
tests/: __init__.py  test_app.py  test_memoise.py  test_memoize.py  test_resource.py  test_scope.py  test_service.py
tests/resource/: __init__.py  test_new.py  test_to.py
tomoyo/: __init__.py  app.py  exception.py  middleware.py  net.py  request.py  resource.py  response.py  server.py  service.py
